[gd_scene load_steps=2 format=3 uid="uid://caaj45dgp2grn"]

[ext_resource type="Script" uid="uid://tuu88i8pqm5r" path="res://scenes/ui/debug_menu.gd" id="1_vv2ch"]

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3
offset = Vector2(20, 20)
scale = Vector2(0.9, 0.9)
transform = Transform2D(0.9, 0, 0, 0.9, 20, 20)

[node name="DebugMenu" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 20.0
offset_right = -1.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vv2ch")

[node name="Panel" type="Panel" parent="DebugMenu"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -20.760002
offset_bottom = -20.760002
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)

[node name="MarginContainer" type="MarginContainer" parent="DebugMenu/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -224.31999
offset_right = 240.0
offset_bottom = 199.99998
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="DebugMenu/Panel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Debug Menu" type="Label" parent="DebugMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "Debug menu"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="DebugMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
tab_alignment = 1
current_tab = 1

[node name="WeaponTab" type="VBoxContainer" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="weapon type" type="Label" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer/WeaponTab"]
layout_mode = 2
text = "weapon type"

[node name="WeaponTypeOption" type="OptionButton" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer/WeaponTab"]
layout_mode = 2

[node name="barrel" type="Label" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer/WeaponTab"]
layout_mode = 2
text = "Barrel"

[node name="BarrelRarityOption" type="OptionButton" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer/WeaponTab"]
layout_mode = 2

[node name="body" type="Label" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer/WeaponTab"]
layout_mode = 2
text = "Body"

[node name="BodyRarityOption" type="OptionButton" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer/WeaponTab"]
layout_mode = 2

[node name="handle" type="Label" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer/WeaponTab"]
layout_mode = 2
text = "Handle"

[node name="HandleRarityOption" type="OptionButton" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer/WeaponTab"]
layout_mode = 2

[node name="mag" type="Label" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer/WeaponTab"]
layout_mode = 2
text = "Magazine"

[node name="MagazineRarityOption" type="OptionButton" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer/WeaponTab"]
layout_mode = 2

[node name="element" type="Label" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer/WeaponTab"]
layout_mode = 2
text = "Element"

[node name="ElementOption" type="OptionButton" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer/WeaponTab"]
layout_mode = 2

[node name="WeaponLevel" type="Label" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer/WeaponTab"]
layout_mode = 2
text = "Weapon Level"

[node name="WeaponSpinBox" type="SpinBox" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer/WeaponTab"]
layout_mode = 2
min_value = 1.0
value = 1.0

[node name="ApplyWeaponButton" type="Button" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer/WeaponTab"]
layout_mode = 2
text = "APPLY WEAPON"

[node name="EnemyTab" type="VBoxContainer" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 1

[node name="Modifier 1" type="Label" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer/EnemyTab"]
layout_mode = 2
text = "Modifier 1"

[node name="Modifier1Option" type="OptionButton" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer/EnemyTab"]
layout_mode = 2

[node name="Modifier 2" type="Label" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer/EnemyTab"]
layout_mode = 2
text = "Modifier 2"

[node name="Modifier2Option" type="OptionButton" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer/EnemyTab"]
layout_mode = 2

[node name="Modifier 3" type="Label" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer/EnemyTab"]
layout_mode = 2
text = "Modifier 3"

[node name="Modifier3Option" type="OptionButton" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer/EnemyTab"]
layout_mode = 2

[node name="Level" type="Label" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer/EnemyTab"]
layout_mode = 2
text = "Enemy Level"

[node name="LevelSpinBox" type="SpinBox" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer/EnemyTab"]
layout_mode = 2
min_value = 1.0
value = 1.0

[node name="SpawnEnemyButton" type="Button" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer/EnemyTab"]
layout_mode = 2
text = "Spawn Enemy"

[node name="PlayerTab" type="VBoxContainer" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Label" type="Label" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer/PlayerTab"]
layout_mode = 2
text = "Health"

[node name="HealthSpinBox" type="SpinBox" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer/PlayerTab"]
layout_mode = 2
min_value = 1.0
max_value = 100000.0
value = 100.0

[node name="SetHealthButton" type="Button" parent="DebugMenu/Panel/MarginContainer/VBoxContainer/TabContainer/PlayerTab"]
layout_mode = 2
text = "Set Health"
